@@ -4,5 +4,7 @@
 
 (require "TDAs/TDA_pixbit-d.rkt")  ;TDA pixbit-d
 
+(require "TDAs/TDA_pixhex-d.rkt")  ;TDA pixhex-d
+
 ;-----------------------------------------------------------------------------------------------------------------------------------------------------
 
